[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://subscenes/tournament/round_edit_base.tscn" type="PackedScene" id=2]
[ext_resource path="res://subscenes/tournament/group_edit.gd" type="Script" id=3]

[node name="GroupEdit" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="Label" parent="." index="0"]
text = "Group"

[node name="PlayerCounter" parent="HBoxContainer" index="1"]
text = "6"

[node name="GroupSize" type="HBoxContainer" parent="." index="2"]
margin_top = 90.0
margin_right = 1920.0
margin_bottom = 136.0

[node name="Label" type="Label" parent="GroupSize" index="0"]
margin_top = 5.0
margin_right = 1798.0
margin_bottom = 41.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Group size:"

[node name="GroupSizeInput" type="LineEdit" parent="GroupSize" index="1"]
margin_left = 1802.0
margin_right = 1920.0
margin_bottom = 46.0
theme = ExtResource( 1 )
text = "3"
max_length = 1
placeholder_text = "3"

[node name="GroupNum" type="HBoxContainer" parent="." index="3"]
margin_top = 140.0
margin_right = 1920.0
margin_bottom = 186.0

[node name="Label" type="Label" parent="GroupNum" index="0"]
margin_top = 5.0
margin_right = 1798.0
margin_bottom = 41.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Number of groups:"

[node name="GroupNumInput" type="LineEdit" parent="GroupNum" index="1"]
margin_left = 1802.0
margin_right = 1920.0
margin_bottom = 46.0
theme = ExtResource( 1 )
text = "2"
max_length = 1
placeholder_text = "1"

[node name="NeededWins" type="HBoxContainer" parent="." index="4"]
margin_top = 190.0
margin_right = 1920.0
margin_bottom = 236.0

[node name="Label" type="Label" parent="NeededWins" index="0"]
margin_top = 5.0
margin_right = 1798.0
margin_bottom = 41.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Wins needed for a 1v1:"

[node name="WinInput" type="LineEdit" parent="NeededWins" index="1"]
margin_left = 1802.0
margin_right = 1920.0
margin_bottom = 46.0
theme = ExtResource( 1 )
text = "2"
max_length = 1
placeholder_text = "1"

[node name="MapPoolHeader" type="Label" parent="." index="5"]
margin_top = 240.0
margin_right = 1920.0
margin_bottom = 276.0
theme = ExtResource( 1 )
text = "Map pool"
align = 1

[node name="MapPool" type="VBoxContainer" parent="." index="6"]
margin_top = 280.0
margin_right = 1920.0
margin_bottom = 280.0

[node name="MapChoice" type="Button" parent="." index="7"]
margin_top = 284.0
margin_right = 1920.0
margin_bottom = 326.0
theme = ExtResource( 1 )
text = "Add map"

[node name="AvailableMaps" type="PopupMenu" parent="." index="8"]
margin_top = 330.0
margin_right = 1920.0
margin_bottom = 350.0
theme = ExtResource( 1 )

[connection signal="text_changed" from="GroupSize/GroupSizeInput" to="." method="_on_GroupSizeInput_text_changed"]
[connection signal="text_changed" from="GroupNum/GroupNumInput" to="." method="_on_GroupNumInput_text_changed"]
[connection signal="text_changed" from="NeededWins/WinInput" to="." method="_on_WinInput_text_changed"]
[connection signal="pressed" from="MapChoice" to="." method="_on_MapChoice_pressed"]
[connection signal="id_pressed" from="AvailableMaps" to="." method="_on_AvailableMaps_id_pressed"]
